--- a/fontend/css/base.css
+++ b/fontend/css/base.css
@@ -19,6 +19,50 @@ body{
   max-width: 390px;
 }
 
+
+/*Contenido Estilos Nav*/
+.custom-nav {
+  margin-top: 10px;
+  margin-right: 30px;
+  margin-bottom: 20px;
+  text-align: right; 
+}
+
+.custom-nav ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: inline-flex;
+  gap: 2rem;             
+}
+
+.custom-nav li a {
+  text-decoration: none;
+  color: #fff;
+  font-weight: bold;
+  text-transform: uppercase;
+  position: relative;
+  padding-bottom: 5px;
+  transition: color 0.3s ease;
+}
+
+/* Línea solo bajo el texto */
+.custom-nav li a::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 0%; /* empieza oculta */
+  height: 3px;
+  background: linear-gradient(90deg, #ff1f3d, #0d6efd);
+  transition: width 0.3s ease;
+}
+
+.custom-nav li a:hover::after {
+  width: 100%; /* subraya solo el texto */
+}
+
+
 /*Btn para cerrar modal*/
 .close-btn {
   position: absolute;
