--- a/fontend/css/base.css
+++ b/fontend/css/base.css
@@ -25,7 +25,7 @@ body{
   margin-top: 10px;
   margin-right: 30px;
   margin-bottom: 20px;
-  text-align: right; 
+  text-align: center; 
 }
 
 .custom-nav ul {
